# electricity-demand-fc

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
examples/: model.ipynb
src/electricity_demand_fc/: data_retrieval.py  main.py
src/electricity_demand_fc/utils/: data_retrieval.py
tests/: test_data_retrieval.py
